# bitaxe-raw

./: .rustfmt.toml  Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: main.rs  uart.rs
src/control/: adc.rs  gpio.rs  i2c.rs  mod.rs
