[package]
name = "bitaxe-raw"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
const-murmur3 = "0.2.1"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
esp-hal-embassy = { version = "0.7.0", features = ["esp32s3"] }
esp-hal = { version = "1.0.0-beta.0", features = ["defmt", "esp32s3", "unstable"] }
esp-alloc = "0.7.0"
heapless = { version = "0.8.0", features = ["defmt-03"] }
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embedded-io-async = "0.6.1"
hex = { version = "0.4.3", default-features = false }
portable-atomic = { version = "1.5", default-features = false, features = ["critical-section"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
